--- a/apps/astro-blog/src/pages/index.astro
+++ b/apps/astro-blog/src/pages/index.astro
@@ -19,8 +19,8 @@ const posts = (await getCollection('blog'))
       main { width: 960px; margin: 0 auto; }
       ul { display: flex; flex-wrap: wrap; gap: 2rem; list-style: none; padding: 0; }
       li { width: calc(50% - 1rem); }
-      .title { margin: 0; }
-      .date { color: gray; margin: 0; }
+      .title { margin: 0; font-size: 1.25rem; }
+      .date { color: gray; margin: 0 0 1rem; font-size: 0.875rem; }
     </style>
   </head>
   <body>
@@ -31,7 +31,7 @@ const posts = (await getCollection('blog'))
         {posts.map(post => (
           <li>
             <a href={`/blog/${post.id}/`}>
-              <img src={post.data.heroImage} alt={post.data.title} width="720" height="360" />
+              {post.data.heroImage && <img src={post.data.heroImage} alt={post.data.title} width="720" height="360" />}
               <h4 class="title">{post.data.title}</h4>
               <p class="date"><FormattedDate date={post.data.pubDate} /></p>
             </a>
