--- a/apps/astro-blog/src/pages/index.astro
+++ b/apps/astro-blog/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
-import { getCollection } from 'astro:content';
-import FormattedDate from '../components/FormattedDate.astro';
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import { getCollection } from "astro:content";
+import FormattedDate from "../components/FormattedDate.astro";
 
-const posts = (await getCollection('blog'))
-  .filter(post => post.data.publish)
+const posts = (await getCollection("blog"))
+  .filter((post) => post.data.publish)
   .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 ---
 
@@ -16,11 +16,29 @@ const posts = (await getCollection('blog'))
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
     <style>
-      main { width: 960px; margin: 0 auto; }
-      ul { display: flex; flex-wrap: wrap; gap: 2rem; list-style: none; padding: 0; }
-      li { width: calc(50% - 1rem); }
-      .title { margin: 0; font-size: 1.25rem; }
-      .date { color: gray; margin: 0 0 1rem; font-size: 0.875rem; }
+      main {
+        width: 960px;
+        margin: 0 auto;
+      }
+      ul {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
+        list-style: none;
+        padding: 0;
+      }
+      li {
+        width: calc(50% - 1rem);
+      }
+      .title {
+        margin: 0;
+        font-size: 1.25rem;
+      }
+      .date {
+        color: gray;
+        margin: 0 0 1rem;
+        font-size: 0.875rem;
+      }
     </style>
   </head>
   <body>
@@ -28,15 +46,26 @@ const posts = (await getCollection('blog'))
     <main>
       <h1>{SITE_TITLE}</h1>
       <ul>
-        {posts.map(post => (
-          <li>
-            <a href={`/blog/${post.id}/`}>
-              {post.data.heroImage && <img src={post.data.heroImage} alt={post.data.title} width="720" height="360" />}
-              <h4 class="title">{post.data.title}</h4>
-              <p class="date"><FormattedDate date={post.data.pubDate} /></p>
-            </a>
-          </li>
-        ))}
+        {
+          posts.map((post) => (
+            <li>
+              <a href={`/post/${post.id}`}>
+                {post.data.heroImage && (
+                  <img
+                    src={post.data.heroImage}
+                    alt={post.data.title}
+                    width="720"
+                    height="360"
+                  />
+                )}
+                <h4 class="title">{post.data.title}</h4>
+                <p class="date">
+                  <FormattedDate date={post.data.pubDate} />
+                </p>
+              </a>
+            </li>
+          ))
+        }
       </ul>
     </main>
     <Footer />
