--- a/apps/astro-blog/src/layouts/BlogPost.astro
+++ b/apps/astro-blog/src/layouts/BlogPost.astro
@@ -7,7 +7,7 @@ import FormattedDate from "../components/FormattedDate.astro";
 
 type Props = CollectionEntry<"blog">["data"];
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { title, description, publishedAt, updatedAt, coverImage } = Astro.props;
 ---
 
 <html lang="en">
@@ -60,19 +60,19 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       <article>
         <div class="hero-image">
           {
-            heroImage && (
-              <img width={1020} height={510} src={heroImage} alt="" />
+            coverImage && (
+              <img width={1020} height={510} src={coverImage} alt="" />
             )
           }
         </div>
         <div class="prose">
           <div class="title">
             <div class="date">
-              <FormattedDate date={pubDate} />
+              <FormattedDate date={publishedAt} />
               {
-                updatedDate && (
+                updatedAt && (
                   <div class="last-updated-on">
-                    Last updated on <FormattedDate date={updatedDate} />
+                    Last updated on <FormattedDate date={updatedAt} />
                   </div>
                 )
               }
