--- a/apps/astro-blog/src/pages/post/index.astro
+++ b/apps/astro-blog/src/pages/post/index.astro
@@ -6,13 +6,13 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
 import { getCollection } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
 
-const posts = (await getCollection("blog")).sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-);
+const posts = (await getCollection("blog"))
+  .filter((post) => !post.data.draft)
+  .sort((a, b) => b.data.publishedAt.valueOf() - a.data.publishedAt.valueOf());
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
     <style>
@@ -97,12 +97,12 @@ const posts = (await getCollection("blog")).sort(
                   <img
                     width={720}
                     height={360}
-                    src={post.data.heroImage}
+                    src={post.data.coverImage}
                     alt=""
                   />
                   <h4 class="title">{post.data.title}</h4>
                   <p class="date">
-                    <FormattedDate date={post.data.pubDate} />
+                    <FormattedDate date={post.data.publishedAt} />
                   </p>
                 </a>
               </li>
