--- a/apps/astro-blog/src/pages/post/[...slug].astro
+++ b/apps/astro-blog/src/pages/post/[...slug].astro
@@ -6,7 +6,7 @@ import { render } from "astro:content";
 export async function getStaticPaths() {
   const posts = await getCollection("blog");
   return posts.map((post) => ({
-    params: { slug: post.id },
+    params: { slug: post.data.slug },
     props: post,
   }));
 }
