Add blog index and tag listing pages with responsive grid layout

--- a/apps/astro-blog/src/pages/index.astro
+++ b/apps/astro-blog/src/pages/index.astro
@@ -49,7 +49,7 @@ const posts = (await getCollection("blog"))
         {
           posts.map((post) => (
             <li>
-              <a href={`/post/${post.id}`}>
+              <a href={`/post/${post.data.slug}`}>
                 {post.data.coverImage && (
                   <img
                     src={post.data.coverImage}
