--- a/apps/astro-blog/src/pages/post/index.astro
+++ b/apps/astro-blog/src/pages/post/index.astro
@@ -5,6 +5,7 @@ import Footer from "../../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
 import { getCollection } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
+import CldImage from "../../components/CldImage.astro";
 
 const posts = (await getCollection("blog"))
   .filter((post) => !post.data.draft)
@@ -94,10 +95,10 @@ const posts = (await getCollection("blog"))
             posts.map((post) => (
               <li>
                 <a href={`/post/${post.data.slug}`}>
-                  <img
+                  <CldImage
+                    publicId={post.data.coverImage}
                     width={720}
                     height={360}
-                    src={post.data.coverImage}
                     alt=""
                   />
                   <h4 class="title">{post.data.title}</h4>
