--- a/apps/astro-blog/src/pages/post/index.astro
+++ b/apps/astro-blog/src/pages/post/index.astro
@@ -95,13 +95,15 @@ const posts = (await getCollection("blog"))
             posts.map((post) => (
               <li>
                 <a href={`/post/${post.data.slug}`}>
-                  <CldImage
-                    publicId={post.data.coverImage}
-                    width={720}
-                    height={360}
-                    alt=""
-                  />
-                  <h4 class="title">{post.data.title}</h4>
+                  {post.data.coverImage && (
+                    <CldImage
+                      publicId={post.data.coverImage}
+                      alt={post.data.title}
+                      width={720}
+                      height={360}
+                    />
+                  )}
+                  <h2 class="title">{post.data.title}</h2>
                   <p class="date">
                     <FormattedDate date={post.data.publishedAt} />
                   </p>
