Add Astro blog app with Cloudinary image integration and remark plugin

--- a/apps/astro-blog/src/components/CldImage.astro
+++ b/apps/astro-blog/src/components/CldImage.astro
@@ -11,7 +11,7 @@ const {
   alt = "",
   widths = [480, 768, 1024, 1200],
   aspectRatio,
-  class: className = "",
+  className = "",
   mode = "fill", // "fill" | "fit"
 } = Astro.props;
 
