--- a/apps/astro-blog/src/layouts/BlogPost.astro
+++ b/apps/astro-blog/src/layouts/BlogPost.astro
@@ -4,6 +4,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
+import CldImage from "../components/CldImage.astro";
 
 type Props = CollectionEntry<"blog">["data"];
 
@@ -22,7 +23,7 @@ const { title, description, publishedAt, updatedAt, coverImage } = Astro.props;
       .hero-image {
         width: 100%;
       }
-      .hero-image img {
+      .hero-image .customImage {
         display: block;
         margin: 0 auto;
         border-radius: 12px;
@@ -61,7 +62,12 @@ const { title, description, publishedAt, updatedAt, coverImage } = Astro.props;
         <div class="hero-image">
           {
             coverImage && (
-              <img width={1020} height={510} src={coverImage} alt="" />
+              <CldImage
+                publicId={coverImage}
+                alt={title}
+                width={1020}
+                height={510}
+              />
             )
           }
         </div>
