--- a/apps/astro-blog/src/pages/post/[...slug].astro
+++ b/apps/astro-blog/src/pages/post/[...slug].astro
@@ -2,6 +2,7 @@
 import { type CollectionEntry, getCollection } from "astro:content";
 import BlogPost from "../../layouts/BlogPost.astro";
 import { render } from "astro:content";
+import CldImage from "../../components/CldImage.astro";
 
 export async function getStaticPaths() {
   const posts = await getCollection("blog");
@@ -10,6 +11,7 @@ export async function getStaticPaths() {
     props: post,
   }));
 }
+
 type Props = CollectionEntry<"blog">;
 
 const post = Astro.props;
@@ -17,5 +19,5 @@ const { Content } = await render(post);
 ---
 
 <BlogPost {...post.data}>
-  <Content />
+  <Content components={{ CldImage }} />
 </BlogPost>
