--- a/apps/svelte-blog/src/components/Post/style/post-links.module.scss
+++ b/apps/svelte-blog/src/components/Post/style/post-links.module.scss
@@ -1,6 +1,6 @@
 // Post content link styling with consistent blue hover effect
-article {
-  a {
+.prose {
+  :global(p a) {
     color: inherit;
     text-decoration: underline;
     transition: color 0.2s ease-in-out;
