--- a/apps/svelte-blog/src/components/Post/style/amazon-card.module.scss
+++ b/apps/svelte-blog/src/components/Post/style/amazon-card.module.scss
@@ -6,9 +6,13 @@
   padding: 1rem;
   border: 1px solid #e5e7eb;
   border-radius: 0.5rem;
-  box-shadow: 0 4px 6px -1px #0000001a, 0 2px 4px -1px #0000000f;
+  box-shadow:
+    0 4px 6px -1px #0000001a,
+    0 2px 4px -1px #0000000f;
   margin: 1.5rem 0;
-  @media (min-width: 768px) { grid-template-columns: 3fr 7fr; }
+  @media (min-width: 768px) {
+    grid-template-columns: 3fr 7fr;
+  }
 }
 
 :global(.amazon-card__image) {
