--- a/apps/svelte-blog/src/components/Post/style/post.module.scss
+++ b/apps/svelte-blog/src/components/Post/style/post.module.scss
@@ -23,4 +23,15 @@
       text-decoration: none;
     }
   }
+
+  // Inline code styling (always applied)
+  :global(:not(pre) > code) {
+    background-color: #374151;
+    color: #e5e7eb;
+    padding: 0.125rem 0.375rem;
+    border-radius: 0.25rem;
+    font-family: 'Fira Code', 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', Consolas, 'Courier New', monospace;
+    font-size: 0.875em;
+    font-weight: 600;
+  }
 }
