--- a/apps/svelte-blog/src/components/Post/style/syntax-highlight.module.scss
+++ b/apps/svelte-blog/src/components/Post/style/syntax-highlight.module.scss
@@ -43,7 +43,7 @@
 
   /* Shikiによるシンタックスハイライト */
   :global(figure[data-rehype-pretty-code-figure] [data-line] span) {
-    color: var(--shiki-default);
+    color: var(--shiki-default, var(--syntax-text));
   }
 
   /* コード行のスタイル */
@@ -72,14 +72,5 @@
     border-radius: 4px;
   }
 
-  /* インラインコードのスタイル */
-  :global(:not(pre) > code) {
-    background-color: var(--inline-code-bg);
-    color: var(--inline-code-text);
-    padding: 0.125rem 0.375rem;
-    border-radius: 0.25rem;
-    font-family: 'Fira Code', 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', Consolas, 'Courier New', monospace;
-    font-size: 0.875em;
-    font-weight: 600;
-  }
+
 }
