--- a/apps/svelte-blog/src/components/Post/style/syntax-highlight.module.scss
+++ b/apps/svelte-blog/src/components/Post/style/syntax-highlight.module.scss
@@ -58,6 +58,12 @@
     background-color: rgba(255, 255, 255, 0.05);
   }
 
+  /* スクロールバーのスタイル（Firefox） */
+  :global(figure[data-rehype-pretty-code-figure] pre) {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
+  }
+
   /* スクロールバーのスタイル（WebKit） */
   :global(figure[data-rehype-pretty-code-figure] pre::-webkit-scrollbar) {
     height: 8px;
