--- a/apps/svelte-blog/src/components/Post/style/post.module.scss
+++ b/apps/svelte-blog/src/components/Post/style/post.module.scss
@@ -26,8 +26,8 @@
 
   // Inline code styling (always applied)
   :global(:not(pre) > code) {
-    background-color: var(--inline-code-bg);
-    color: var(--inline-code-text);
+    background-color: var(--inline-code-bg, #374151);
+    color: var(--inline-code-text, #e5e7eb);
     padding: 0.125rem 0.375rem;
     border-radius: 0.25rem;
     font-family: 'Fira Code', 'SF Mono', Monaco, 'Cascadia Code', 'Roboto Mono', Consolas, 'Courier New', monospace;
