refactor: 画像を含むfigureのスタイルを整理し、中央揃えを適用

--- a/apps/svelte-blog/src/components/Post/style/post.module.scss
+++ b/apps/svelte-blog/src/components/Post/style/post.module.scss
@@ -40,6 +40,10 @@
   // Image and figure styling
   :global(figure) {
     margin: 2rem 0;
+  }
+
+  // Image figure styling (only for figures containing images)
+  :global(figure:has(img)) {
     text-align: center;
   }
 
