--- a/apps/svelte-blog/src/components/Post/style/post.module.scss
+++ b/apps/svelte-blog/src/components/Post/style/post.module.scss
@@ -28,8 +28,8 @@
 
   // Inline code styling (always applied)
   :global(:not(pre) > code) {
-    background-color: var(--inline-code-bg, #374151);
-    color: var(--inline-code-text, #e5e7eb);
+    background-color: var(--inline-code-bg, #f1f5f9);
+    color: var(--inline-code-text, #334155);
     padding: 0.125rem 0.375rem;
     border-radius: 0.25rem;
     font-family:
