--- a/apps/svelte-blog/src/components/Post/style/syntax-highlight.module.scss
+++ b/apps/svelte-blog/src/components/Post/style/syntax-highlight.module.scss
@@ -8,8 +8,8 @@
   --syntax-bg: #1a2638;
   --syntax-border: #374151;
   --syntax-text: #e6edf3;
-  --inline-code-bg: #374151;
-  --inline-code-text: #e5e7eb;
+  --inline-code-bg: #f1f5f9;
+  --inline-code-text: #334155;
 
   /* コードブロック全体のコンテナ */
   :global(figure[data-rehype-pretty-code-figure]) {
